# toucan-ui

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build_widgets.sh  default.nix  root.qml  rust-platform-nightly.nix
.github/workflows/: ci.yml
common/: Cargo.toml  build.rs  qthax.h
common/src/: lib.rs  model.rs  qthax.rs
frontend/: Cargo.toml  LICENSE  data  prelude.js
frontend/qml/: prelude.js  root.qml
frontend/src/: main.rs
model_macro/: Cargo.toml
model_macro/src/: lib.rs  tree_model.rs
src/: main.rs  model.rs
